--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tvmaze-app",
-  "version": "1.0.0",
-  "author": "Chasty coderessence@gmail.com",
+  "version": "1.0.3",
+  "author": "Fausto Zambrano d.zambrano.vasconez@gmail.com",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -15,36 +15,33 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@react-navigation/drawer": "^6.6.2",
-    "expo": "^48.0.7",
-    "expo-constants": "~14.2.1",
-    "expo-linking": "~4.0.1",
-    "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.3",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "typescript": "^4.9.4",
-    "@types/react": "~18.0.27"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/drawer": "^7.5.6",
+    "@types/react": "~19.0.10",
+    "axios": "^1.11.0",
+    "expo": "^53.0.20",
+    "expo-constants": "~17.1.7",
+    "expo-linking": "~7.1.7",
+    "expo-router": "^5.1.4",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-toast-message": "^2.3.3",
+    "react-native-web": "^0.20.0",
+    "react-native-worklets-core": "^1.6.2",
+    "typescript": "~5.8.3",
+    "undefined": "react-native-vector-icons/Ionicons"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.28.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
-  },
-  "resolutions": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
-  },
-  "overrides": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
   },
   "private": true
 }
