--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.20.0",
     "react-native-worklets-core": "^1.6.2",
-    "typescript": "~5.8.3",
-    "undefined": "react-native-vector-icons/Ionicons"
+    "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
